plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.ds.deliveryapp'
    compileSdk 36

    defaultConfig {
        applicationId "com.ds.deliveryapp"
        minSdk 26
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.preference
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    //Lombok lib
    compileOnly(libs.lombok)
    annotationProcessor(libs.lombok)
    testCompileOnly(libs.lombok)
    testAnnotationProcessor(libs.lombok)
    //Scan code library
    implementation libs.zxing.android.embedded
    //
    implementation libs.retrofit
    // Converter (for JSON serialization/deserialization - GSON is common)
    implementation libs.converter.gson
    implementation libs.gson
    implementation libs.gson.javatime.serialisers

    // OkHttp (usually included by Retrofit, but good practice to define)
    implementation libs.okhttp

    // openstreet map
    implementation 'org.osmdroid:osmdroid-android:6.1.18'
    implementation 'com.google.android.gms:play-services-location:21.0.1'


}